{{$NEXT}}

    - The DejaVu fonts have been removed from the distribution, since
      they were only used by one example script.  If you need them for
      your project, you can download them from http://dejavu-fonts.org

    - [RT #58386] Fix create_egs call in Lite.pm (J Greely)

    - [RT #62922] Fix string interpolation in pdf-merge.pl
      (Guillaume Rousse)

2.016     2011-01-24

    - New Maintainer: Steve Simms (http://deefs.net)
    
    - This release jumps from version 0.73 to 2.016 in order to
      provide a consistent version number across all modules in the
      distribution without breaking any existing code or going
      backwards.
    
    - Lots of updates to the documentation, particularly in
      PDF::API2::Content, which was almost completely rewritten and
      reorganized.
    
    - Font::TTF has been added as a dependency instead of being
      embedded in the distribution.
    
    - Everything that worked in 0.73 should work unmodified in 2.016,
      at least if it used the published documentation, and most
      everything should still work even if it didn't.
    
    - PDF::API2 used to read and parse three text files, one of which
      was over 500kB, on every load.  These files have been turned
      into modules, and while I haven't done any performance testing,
      I'd have a hard time believing that it isn't faster now.
    
    - There are now a few tests forming the beginning of a test suite.
      Contributions of tests would be most welcome!


======================================================================

Changes below this point are from PDF::API2 0.73 and earlier,
generated from the CVS logs.

======================================================================

2009-03-20 09:54  fredo

        * lib/PDF/API2/Resource/CIDFont/TrueType.pm: rt.cpan.org
          #42524: strange space size after update on 0.72.003 from
          0.71

2008-11-20 19:51  fredo
